0.6/_sources/user-guide/general/exporting_results/examples/plot_export_outputs_to_json.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/general/exporting_results/examples/plot_export_outputs_to_json.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_user-guide_general_exporting_results_examples_plot_export_outputs_to_json.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_general_exporting_results_examples_plot_export_outputs_to_json.py:


Export Outputs to JSON
**********************

In this guide, we will demonstrate how to export the Check's and the Suite's output to JSON format.

This enables to use the exported results as a serializeable object that can later be
shared or reviewed in other Python scopes, and also enables working with the check's
output (name, parameters, result value and result display) not only in a visual manner
(e.g. by parsing the output JSON).

**Structure:**

* `Load Data <#load-data>`__
* `Run a Check <#run-a-check>`__
* `Export Check to JSON <#export-a-check-s-output-checkresult-to-a-json-format>`__
* `Export Suite to JSON <#exporting-a-suite-s-output-suiteresult-to-json>`__

.. GENERATED FROM PYTHON SOURCE LINES 22-24

Load Data
=========

.. GENERATED FROM PYTHON SOURCE LINES 24-30

.. code-block:: default


    from deepchecks.tabular.datasets.classification import iris

    train_dataset, test_dataset = iris.load_data()
    model = iris.load_fitted_model()








.. GENERATED FROM PYTHON SOURCE LINES 31-33

Run a Check
===========

.. GENERATED FROM PYTHON SOURCE LINES 33-39

.. code-block:: default


    from deepchecks.tabular.checks import WholeDatasetDrift

    result = WholeDatasetDrift().add_condition_overall_drift_value_not_greater_than(
    ).run(train_dataset, test_dataset, model)








.. GENERATED FROM PYTHON SOURCE LINES 40-41

Observe CheckResult Display and Value

.. GENERATED FROM PYTHON SOURCE LINES 41-44

.. code-block:: default


    result






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    <!--
        ~ ----------------------------------------------------------------------------
        ~ Copyright (C) 2021-2022 Deepchecks (https://www.deepchecks.com)
        ~
        ~ This file is part of Deepchecks.
        ~ Deepchecks is distributed under the terms of the GNU Affero General
        ~ Public License (version 3 or later).
        ~ You should have received a copy of the GNU Affero General Public License
        ~ along with Deepchecks.  If not, see <http://www.gnu.org/licenses/>.
        ~ ----------------------------------------------------------------------------
        ~
    -->
    <!DOCTYPE html>
    <html lang="en">
    <head>
        <meta charset="UTF-8">
        <title>Whole Dataset Drift</title>
        <style>
            body {
                font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
                font-size: 1rem;
                line-height: 1.5;
                color: #212529;
                text-align: left;
                max-width: 1200px;
                margin: auto;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt *,
            div.nbinput.container div.input_area pre,
            div.nboutput.container div.output_area pre,
            div.nbinput.container div.input_area .highlight,
            div.nboutput.container div.output_area .highlight {
                border: none;
                padding: 0;
                margin: 0;
                box-shadow: none;
            }

            div.nbinput.container > div[class*=highlight],
            div.nboutput.container > div[class*=highlight] {
                margin: 0;
            }

            div.nbinput.container div.prompt *,
            div.nboutput.container div.prompt * {
                background: none;
            }

            div.nboutput.container div.output_area .highlight,
            div.nboutput.container div.output_area pre {
                background: unset;
            }

            div.nboutput.container div.output_area div.highlight {
                color: unset;  /* override Pygments text color */
            }

            /* avoid gaps between output lines */
            div.nboutput.container div[class*=highlight] pre {
                line-height: normal;
            }

            /* input/output containers */
            div.nbinput.container,
            div.nboutput.container {
                display: -webkit-flex;
                display: flex;
                align-items: flex-start;
                margin: 0;
                width: 100%;
            }
            @media (max-width: 540px) {
                div.nbinput.container,
                div.nboutput.container {
                    flex-direction: column;
                }
            }

            /* input container */
            div.nbinput.container {
                padding-top: 5px;
            }

            /* last container */
            div.nblast.container {
                padding-bottom: 5px;
            }

            /* input prompt */
            div.nbinput.container div.prompt pre {
                color: #307FC1;
            }

            /* output prompt */
            div.nboutput.container div.prompt pre {
                color: #BF5B3D;
            }

            /* all prompts */
            div.nbinput.container div.prompt,
            div.nboutput.container div.prompt {
                width: 4.5ex;
                padding-top: 5px;
                position: relative;
                user-select: none;
            }

            div.nbinput.container div.prompt > div,
            div.nboutput.container div.prompt > div {
                position: absolute;
                right: 0;
                margin-right: 0.3ex;
            }

            @media (max-width: 540px) {
                div.nbinput.container div.prompt,
                div.nboutput.container div.prompt {
                    width: unset;
                    text-align: left;
                    padding: 0.4em;
                }
                div.nboutput.container div.prompt.empty {
                    padding: 0;
                }

                div.nbinput.container div.prompt > div,
                div.nboutput.container div.prompt > div {
                    position: unset;
                }
            }

            /* disable scrollbars on prompts */
            div.nbinput.container div.prompt pre,
            div.nboutput.container div.prompt pre {
                overflow: hidden;
            }

            /* input/output area */
            div.nbinput.container div.input_area,
            div.nboutput.container div.output_area {
                -webkit-flex: 1;
                flex: 1;
                overflow: auto;
            }
            @media (max-width: 540px) {
                div.nbinput.container div.input_area,
                div.nboutput.container div.output_area {
                    width: 100%;
                }
            }

            /* input area */
            div.nbinput.container div.input_area {
                border: 1px solid #e0e0e0;
                border-radius: 2px;
                /*background: #f5f5f5;*/
            }

            /* override MathJax center alignment in output cells */
            div.nboutput.container div[class*=MathJax] {
                text-align: left !important;
            }

            /* override sphinx.ext.imgmath center alignment in output cells */
            div.nboutput.container div.math p {
                text-align: left;
            }

            /* standard error */
            div.nboutput.container div.output_area.stderr {
                background: #fdd;
            }

            /* ANSI colors */
            .ansi-black-fg { color: #3E424D; }
            .ansi-black-bg { background-color: #3E424D; }
            .ansi-black-intense-fg { color: #282C36; }
            .ansi-black-intense-bg { background-color: #282C36; }
            .ansi-red-fg { color: #E75C58; }
            .ansi-red-bg { background-color: #E75C58; }
            .ansi-red-intense-fg { color: #B22B31; }
            .ansi-red-intense-bg { background-color: #B22B31; }
            .ansi-green-fg { color: #00A250; }
            .ansi-green-bg { background-color: #00A250; }
            .ansi-green-intense-fg { color: #007427; }
            .ansi-green-intense-bg { background-color: #007427; }
            .ansi-yellow-fg { color: #DDB62B; }
            .ansi-yellow-bg { background-color: #DDB62B; }
            .ansi-yellow-intense-fg { color: #B27D12; }
            .ansi-yellow-intense-bg { background-color: #B27D12; }
            .ansi-blue-fg { color: #208FFB; }
            .ansi-blue-bg { background-color: #208FFB; }
            .ansi-blue-intense-fg { color: #0065CA; }
            .ansi-blue-intense-bg { background-color: #0065CA; }
            .ansi-magenta-fg { color: #D160C4; }
            .ansi-magenta-bg { background-color: #D160C4; }
            .ansi-magenta-intense-fg { color: #A03196; }
            .ansi-magenta-intense-bg { background-color: #A03196; }
            .ansi-cyan-fg { color: #60C6C8; }
            .ansi-cyan-bg { background-color: #60C6C8; }
            .ansi-cyan-intense-fg { color: #258F8F; }
            .ansi-cyan-intense-bg { background-color: #258F8F; }
            .ansi-white-fg { color: #C5C1B4; }
            .ansi-white-bg { background-color: #C5C1B4; }
            .ansi-white-intense-fg { color: #A1A6B2; }
            .ansi-white-intense-bg { background-color: #A1A6B2; }

            .ansi-default-inverse-fg { color: #FFFFFF; }
            .ansi-default-inverse-bg { background-color: #000000; }

            .ansi-bold { font-weight: bold; }
            .ansi-underline { text-decoration: underline; }


            div.nbinput.container div.input_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight] > pre,
            div.nboutput.container div.output_area div[class*=highlight].math,
            div.nboutput.container div.output_area.rendered_html,
            div.nboutput.container div.output_area > div.output_javascript,
            div.nboutput.container div.output_area:not(.rendered_html) > img{
                padding: 5px;
                margin: 0;
            }

            /* fix copybtn overflow problem in chromium (needed for 'sphinx_copybutton') */
            div.nbinput.container div.input_area > div[class^='highlight'],
            div.nboutput.container div.output_area > div[class^='highlight']{
                overflow-y: hidden;
            }

            /* hide copybtn icon on prompts (needed for 'sphinx_copybutton') */
            .prompt .copybtn {
                display: none;
            }

            /* Some additional styling taken form the Jupyter notebook CSS */
            div.rendered_html table {
            border: none;
            border-collapse: collapse;
            border-spacing: 0;
            color: black;
            font-size: 12px;
            table-layout: fixed;
            }
            div.rendered_html thead {
            border-bottom: 1px solid black;
            vertical-align: bottom;
            }
            div.rendered_html tr,
            div.rendered_html th,
            div.rendered_html td {
            text-align: right;
            vertical-align: middle;
            padding: 0.5em 0.5em;
            line-height: normal;
            white-space: normal;
            max-width: none;
            border: none;
            }
            div.rendered_html th {
            font-weight: bold;
            }
            div.rendered_html tbody tr:nth-child(odd) {
            background: #f5f5f5;
            }
            div.rendered_html tbody tr:hover {
            background: rgba(66, 165, 245, 0.2);
            }
        </style>
        <script>
            (!window.navigator.onLine ? alert('needs internet connection') : '');
        </script>
    </head>
    <body>
    
    <script src="" crossorigin="anonymous"></script>
    <script type="application/vnd.jupyter.widget-state+json">
    {
      "version_major": 2,
      "version_minor": 0,
      "state": {
        "8678c0770bf64fc085fc8eb333383d17": {
          "model_name": "VBoxModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [
              "rendered_html"
            ],
            "children": [
              "IPY_MODEL_efc141e7da714be68869484b664bcf65"
            ],
            "layout": "IPY_MODEL_b0b300806f6640539ec39bdbd418c23e"
          }
        },
        "efc141e7da714be68869484b664bcf65": {
          "model_name": "HTMLModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {
            "_dom_classes": [],
            "layout": "IPY_MODEL_ae89ca34fa2349cebab309a832a4b773",
            "style": "IPY_MODEL_67655cb99c4e4ee99d2578649d2c639b",
            "value": "<h4>Whole Dataset Drift</h4><p>    Calculate drift between the entire train and test datasets using a model trained to distinguish between them. <a href=\"https://docs.deepchecks.com/0.6/checks_gallery/tabular/distribution/plot_whole_dataset_drift.html?utm_source=display_output&utm_medium=referral&utm_campaign=check_link\" target=\"_blank\">Read More...</a></p><h5>Conditions Summary</h5><style type=\"text/css\">\n#T_3df72 table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_3df72 thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_3df72 tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_3df72 th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_3df72 td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id=\"T_3df72\">\n  <thead>\n    <tr>\n      <th id=\"T_3df72_level0_col0\" class=\"col_heading level0 col0\" >Status</th>\n      <th id=\"T_3df72_level0_col1\" class=\"col_heading level0 col1\" >Condition</th>\n      <th id=\"T_3df72_level0_col2\" class=\"col_heading level0 col2\" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id=\"T_3df72_row0_col0\" class=\"data row0 col0\" ><div style=\"color: green;text-align: center\">\u2713</div></td>\n      <td id=\"T_3df72_row0_col1\" class=\"data row0 col1\" >Drift value is not greater than 0.25</td>\n      <td id=\"T_3df72_row0_col2\" class=\"data row0 col2\" ></td>\n    </tr>\n  </tbody>\n</table>\n<h5>Additional Outputs</h5><p><b>&#x2713;</b> Nothing found</p>"
          }
        },
        "ae89ca34fa2349cebab309a832a4b773": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        },
        "67655cb99c4e4ee99d2578649d2c639b": {
          "model_name": "DescriptionStyleModel",
          "model_module": "@jupyter-widgets/controls",
          "model_module_version": "1.5.0",
          "state": {}
        },
        "b0b300806f6640539ec39bdbd418c23e": {
          "model_name": "LayoutModel",
          "model_module": "@jupyter-widgets/base",
          "model_module_version": "1.2.0",
          "state": {}
        }
      }
    }
    </script>
    <script type="application/vnd.jupyter.widget-view+json">
    {"version_major": 2, "version_minor": 0, "model_id": "8678c0770bf64fc085fc8eb333383d17"}
    </script>

    </body>
    </html>
    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default

    result.value





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'domain_classifier_auc': 0.4545454545454546, 'domain_classifier_drift_score': 0, 'domain_classifier_feature_importance': {'petal length (cm)': 1.0, 'sepal length (cm)': 0.0, 'sepal width (cm)': 0.0, 'petal width (cm)': 0.0}}



.. GENERATED FROM PYTHON SOURCE LINES 48-60

Export a Check's Output (CheckResult) to a JSON Format
======================================================
Serialization of the output to a JSON format is possible using the ``to_json`` function.
This function takes the check outputs and serializes it to a JSON string.

The format of the check's output json includes all info required to reconstruct
the check run and it's output: it's name, the parameters the check receives, one
sentence summary of the check's purpose, it's result value and a json of the data
relevant for displaying the check's outputs.

See Check JSON Structure
------------------------

.. GENERATED FROM PYTHON SOURCE LINES 60-65

.. code-block:: default


    from deepchecks.core import CheckResult

    help(CheckResult.to_json)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Help on function to_json in module deepchecks.core.check_result:

    to_json(self, with_display: bool = True) -> str
        Return check result as json.
    
        Parameters
        ----------
        with_display : bool
            controls if to serialize display or not
    
        Returns
        -------
        str
            {'name': .., 'params': .., 'header': ..,
             'summary': .., 'conditions_table': .., 'value', 'display': ..}





.. GENERATED FROM PYTHON SOURCE LINES 66-70

.. code-block:: default


    # get output JSON
    serialized_output = result.to_json()








.. GENERATED FROM PYTHON SOURCE LINES 71-77

.. code-block:: default


    import json

    # note - conditions_table key exists only if there are conditions that were defined on check
    json.loads(serialized_output).keys()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    dict_keys(['name', 'params', 'header', 'summary', 'conditions_table', 'value', 'display'])



.. GENERATED FROM PYTHON SOURCE LINES 78-80

Observe JSON Output
-------------------

.. GENERATED FROM PYTHON SOURCE LINES 80-83

.. code-block:: default


    json.loads(serialized_output)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'name': 'Whole Dataset Drift', 'params': {'n_top_columns': 3, 'min_feature_importance': 0.05, 'max_num_categories_for_display': 10, 'show_categories_by': 'train_largest', 'sample_size': 10000, 'random_state': 42, 'test_size': 0.3, 'min_meaningful_drift_score': 0.05}, 'header': 'Whole Dataset Drift', 'summary': '    Calculate drift between the entire train and test datasets using a model trained to distinguish between them.', 'conditions_table': '[{"Status":"PASS","Condition":"Drift value is not greater than 0.25","More Info":""}]', 'value': {'domain_classifier_auc': {'dtype': 'float64', 'value': 0.4545454545454546}, 'domain_classifier_drift_score': 0, 'domain_classifier_feature_importance': {'petal length (cm)': 1.0, 'sepal length (cm)': 0.0, 'sepal width (cm)': 0.0, 'petal width (cm)': 0.0}}, 'display': []}



.. GENERATED FROM PYTHON SOURCE LINES 84-88

Display the CheckResult Output from a JSON
------------------------------------------
The serialized JSON can be used to reproduce the run in other Python scopes,
by using the ``display_from_json`` function

.. GENERATED FROM PYTHON SOURCE LINES 88-91

.. code-block:: default


    CheckResult.display_from_json(serialized_output)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    {'text/html': '<h4>Whole Dataset Drift</h4>'}
    {'text/html': '<p>    Calculate drift between the entire train and test datasets using a model trained to distinguish between them.</p>'}
    {'text/html': '<h5>Conditions Summary</h5>'}
    {'text/html': '<style type="text/css">\n#T_10222 table {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_10222 thead {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_10222 tbody {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_10222 th {\n  text-align: left;\n  white-space: pre-wrap;\n}\n#T_10222 td {\n  text-align: left;\n  white-space: pre-wrap;\n}\n</style>\n<table id="T_10222">\n  <thead>\n    <tr>\n      <th id="T_10222_level0_col0" class="col_heading level0 col0" >Status</th>\n      <th id="T_10222_level0_col1" class="col_heading level0 col1" >Condition</th>\n      <th id="T_10222_level0_col2" class="col_heading level0 col2" >More Info</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td id="T_10222_row0_col0" class="data row0 col0" >PASS</td>\n      <td id="T_10222_row0_col1" class="data row0 col1" >Drift value is not greater than 0.25</td>\n      <td id="T_10222_row0_col2" class="data row0 col2" ></td>\n    </tr>\n  </tbody>\n</table>\n'}
    {'text/html': '<h5>Additional Outputs</h5>'}




.. GENERATED FROM PYTHON SOURCE LINES 92-96

Exporting a Suite's Output (SuiteResult) to JSON
================================================
Run Suite and Save to JSON
--------------------------

.. GENERATED FROM PYTHON SOURCE LINES 96-101

.. code-block:: default


    from deepchecks.tabular.suites import full_suite

    suite = full_suite()








.. GENERATED FROM PYTHON SOURCE LINES 102-106

.. code-block:: default


    suite_result = suite.run(train_dataset=train_dataset, test_dataset=test_dataset, model=model)
    suite_json = suite_result.to_json()





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Full Suite:   0%|                                   | 0/35 [00:00<?, ? Check/s]    Full Suite:   0%|                                   | 0/35 [00:00<?, ? Check/s, Check=Model Info]    Full Suite:   3%|#                                  | 1/35 [00:00<00:00, 40.32 Check/s, Check=Columns Info]    Full Suite:   6%|##                                 | 2/35 [00:00<00:01, 23.61 Check/s, Check=Confusion Matrix Report]    Full Suite:   9%|###                                | 3/35 [00:00<00:02, 14.52 Check/s, Check=Confusion Matrix Report]    Full Suite:   9%|###                                | 3/35 [00:00<00:02, 14.52 Check/s, Check=Performance Report]         Full Suite:  11%|####                               | 4/35 [00:00<00:02, 14.52 Check/s, Check=Roc Report]            Full Suite:  14%|#####                              | 5/35 [00:00<00:03,  7.63 Check/s, Check=Roc Report]    Full Suite:  14%|#####                              | 5/35 [00:00<00:03,  7.63 Check/s, Check=Simple Model Comparison]    Full Suite:  17%|######                             | 6/35 [00:00<00:03,  7.75 Check/s, Check=Simple Model Comparison]    Full Suite:  17%|######                             | 6/35 [00:00<00:03,  7.75 Check/s, Check=Model Error Analysis]       Full Suite:  20%|#######                            | 7/35 [00:01<00:04,  5.90 Check/s, Check=Model Error Analysis]    Full Suite:  20%|#######                            | 7/35 [00:01<00:04,  5.90 Check/s, Check=Calibration Score]       Full Suite:  23%|########                           | 8/35 [00:01<00:04,  5.90 Check/s, Check=Regression Systematic Error]    Full Suite:  26%|#########                          | 9/35 [00:01<00:04,  5.90 Check/s, Check=Regression Error Distribution]    Full Suite:  29%|##########                         | 10/35 [00:01<00:04,  5.90 Check/s, Check=Boosting Overfit]                Full Suite:  31%|###########                        | 11/35 [00:01<00:04,  5.90 Check/s, Check=Unused Features]     Full Suite:  34%|############                       | 12/35 [00:01<00:01, 13.80 Check/s, Check=Unused Features]    Full Suite:  34%|############                       | 12/35 [00:01<00:01, 13.80 Check/s, Check=Model Inference Time]    Full Suite:  37%|#############                      | 13/35 [00:01<00:01, 13.80 Check/s, Check=Train Test Feature Drift]    Full Suite:  40%|##############                     | 14/35 [00:01<00:01, 13.80 Check/s, Check=Train Test Label Drift]      Full Suite:  43%|###############                    | 15/35 [00:01<00:01, 11.87 Check/s, Check=Train Test Label Drift]    Full Suite:  43%|###############                    | 15/35 [00:01<00:01, 11.87 Check/s, Check=Whole Dataset Drift]       Full Suite:  46%|################                   | 16/35 [00:01<00:01, 11.87 Check/s, Check=Dominant Frequency Change]    Full Suite:  49%|#################                  | 17/35 [00:01<00:01, 12.79 Check/s, Check=Dominant Frequency Change]    Full Suite:  49%|#################                  | 17/35 [00:01<00:01, 12.79 Check/s, Check=Category Mismatch Train Test]    Full Suite:  51%|##################                 | 18/35 [00:01<00:01, 12.79 Check/s, Check=New Label Train Test]            Full Suite:  54%|###################                | 19/35 [00:01<00:01, 12.79 Check/s, Check=String Mismatch Comparison]    Full Suite:  57%|####################               | 20/35 [00:01<00:01, 12.79 Check/s, Check=Datasets Size Comparison]      Full Suite:  60%|#####################              | 21/35 [00:01<00:01, 12.79 Check/s, Check=Date Train Test Leakage Duplicates]    Full Suite:  63%|######################             | 22/35 [00:01<00:01, 12.79 Check/s, Check=Date Train Test Leakage Overlap]       Full Suite:  66%|#######################            | 23/35 [00:01<00:00, 12.79 Check/s, Check=Single Feature Contribution Train Test]    Full Suite:  69%|########################           | 24/35 [00:01<00:00, 22.49 Check/s, Check=Single Feature Contribution Train Test]    Full Suite:  69%|########################           | 24/35 [00:01<00:00, 22.49 Check/s, Check=Train Test Samples Mix]                    Full Suite:  71%|#########################          | 25/35 [00:01<00:00, 22.49 Check/s, Check=Identifier Leakage]        Full Suite:  74%|##########################         | 26/35 [00:01<00:00, 22.49 Check/s, Check=Index Train Test Leakage]    Full Suite:  77%|###########################        | 27/35 [00:01<00:00, 22.49 Check/s, Check=Is Single Value]             Full Suite:  80%|############################       | 28/35 [00:01<00:00, 22.49 Check/s, Check=Mixed Nulls]        Full Suite:  83%|#############################      | 29/35 [00:01<00:00, 22.49 Check/s, Check=Mixed Data Types]    Full Suite:  86%|##############################     | 30/35 [00:01<00:00, 22.49 Check/s, Check=String Mismatch]     Full Suite:  89%|###############################    | 31/35 [00:01<00:00, 22.49 Check/s, Check=Data Duplicates]    Full Suite:  91%|################################   | 32/35 [00:01<00:00, 22.49 Check/s, Check=String Length Out Of Bounds]    Full Suite:  94%|#################################  | 33/35 [00:01<00:00, 22.49 Check/s, Check=Special Characters]             Full Suite:  97%|################################## | 34/35 [00:01<00:00, 22.49 Check/s, Check=Label Ambiguity]                                                                                                                  



.. GENERATED FROM PYTHON SOURCE LINES 107-109

Observe Suite's JSON Strucutre
------------------------------

.. GENERATED FROM PYTHON SOURCE LINES 109-114

.. code-block:: default


    from deepchecks.core import SuiteResult

    help(SuiteResult.to_json)





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    Help on function to_json in module deepchecks.core.suite:

    to_json(self, with_display: bool = True)
        Return check result as json.
    
        Parameters
        ----------
        with_display : bool
            controls if to serialize display of checks or not
    
        Returns
        -------
        dict
            {'name': .., 'results': ..}





.. GENERATED FROM PYTHON SOURCE LINES 115-116

Suite name:

.. GENERATED FROM PYTHON SOURCE LINES 116-119

.. code-block:: default


    json.loads(suite_json)['name']





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    'Full Suite'



.. GENERATED FROM PYTHON SOURCE LINES 120-121

Results is an array of CheckResult JSON's, let's see how many checks ran in suite:

.. GENERATED FROM PYTHON SOURCE LINES 121-124

.. code-block:: default


    len(json.loads(suite_json)['results'])





.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    51



.. GENERATED FROM PYTHON SOURCE LINES 125-128

Lets observe a specific check's output, which is similar to the `Check output's
JSON Structure <#export-a-check-s-output-checkresult-to-a-json-format>`__ we saw
before for each check

.. GENERATED FROM PYTHON SOURCE LINES 128-130

.. code-block:: default


    json.loads(json.loads(suite_json)['results'][0])




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    {'name': 'Model Info', 'params': {}, 'header': 'Model Info', 'summary': 'Summarize given model parameters.', 'value': {'type': 'RandomForestClassifier', 'params': {'bootstrap': True, 'ccp_alpha': 0.0, 'class_weight': None, 'criterion': 'gini', 'max_depth': None, 'max_features': 'auto', 'max_leaf_nodes': None, 'max_samples': None, 'min_impurity_decrease': 0.0, 'min_samples_leaf': 1, 'min_samples_split': 2, 'min_weight_fraction_leaf': 0.0, 'n_estimators': 100, 'n_jobs': None, 'oob_score': False, 'random_state': None, 'verbose': 0, 'warm_start': False}}, 'display': [['html', 'Model Type: RandomForestClassifier'], ['dataframe', '[{"Parameter":"bootstrap","Value":true,"Default":true},{"Parameter":"ccp_alpha","Value":0.0,"Default":0.0},{"Parameter":"class_weight","Value":null,"Default":null},{"Parameter":"criterion","Value":"gini","Default":"gini"},{"Parameter":"max_depth","Value":null,"Default":null},{"Parameter":"max_features","Value":"auto","Default":"auto"},{"Parameter":"max_leaf_nodes","Value":null,"Default":null},{"Parameter":"max_samples","Value":null,"Default":null},{"Parameter":"min_impurity_decrease","Value":0.0,"Default":0.0},{"Parameter":"min_samples_leaf","Value":1,"Default":1},{"Parameter":"min_samples_split","Value":2,"Default":2},{"Parameter":"min_weight_fraction_leaf","Value":0.0,"Default":0.0},{"Parameter":"n_estimators","Value":100,"Default":100},{"Parameter":"n_jobs","Value":null,"Default":null},{"Parameter":"oob_score","Value":false,"Default":false},{"Parameter":"random_state","Value":null,"Default":null},{"Parameter":"verbose","Value":0,"Default":0},{"Parameter":"warm_start","Value":false,"Default":false}]'], ['html', '<p style="font-size:0.7em"><i>Colored rows are parameters with non-default values</i></p>']]}




.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  6.940 seconds)


.. _sphx_glr_download_user-guide_general_exporting_results_examples_plot_export_outputs_to_json.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_export_outputs_to_json.py <plot_export_outputs_to_json.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_export_outputs_to_json.ipynb <plot_export_outputs_to_json.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
